Added photo section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -34,6 +34,7 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#photos">Photos</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#speakers">Speakers</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#committee">Committees</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#dates">Deadlines</a></li>
@@ -89,6 +90,62 @@
         </div>
     </header>
 
+<!-- Photos-->
+<section class="page-section"id="photos">
+	<div id="photo"class="container">
+		<div class="row justify-content-center">
+			<div class="col-lg-10 text-center">
+			<h4 style="text-align: center;">Conference Photos</h4>
+			<hr class="divider my-4"/>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-6">
+				<div class="thumbnail">
+				<a href="https://flic.kr/p/2nCpqrY"target="_blank">
+				<img src="assets/img/group1.jpg"alt="Group photo 1" height="300" style="padding-left:40px;">
+					<div class="caption">
+					<p style="font-size:small; text-align: center;">Group photo 1</p>
+					</div>
+				</a>
+				</div>
+			</div>
+
+			<div class="col-md-6">
+				<div class="thumbnail">
+				<a href="https://flic.kr/p/2nCqNtu"target="_blank">
+				<img src="assets/img/group2.jpg"alt="Group photo 2" height="300" style="padding-left:40px;">
+					<div class="caption">
+					<p style="font-size:small; text-align: center;">Group photo 2</p>
+					</div>
+				</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+   <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-10 text-center">
+	         	<p class="text mb-6">Here are some photographic albums from the conference. Unless stated otherwise, they are taken by the official photographer.</p>
+                <ul style="text-align: left;">
+                	<li><a href="https://flic.kr/s/aHBqjA1r8t" target="_blank">Day 1</a> </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1qWN" target="_blank">Day 2</a> </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1qfc" target="_blank">Day 3</a> </li>
+                	<li><a href="https://photos.app.goo.gl/F9d2T2wsASiQnv629" target="_blank">Excursion to Shravanabelagola</a> (Tom Roby) </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1nje" target="_blank">Day 4</a> </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1A1x" target="_blank">Banquet</a> </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1miH" target="_blank">Day 5</a> </li>
+                	<li><a href="https://flic.kr/s/aHBqjA1hPS" target="_blank">Frisbee!</a> (Sean Griffin)</li>
+                	<li><a href="https://flic.kr/s/aHBqjA1kLz" target="_blank">Classical music concert</a> </li>
+                </ul>
+          	</div>
+        </div>
+   </div>
+	
+</section>
+    	
     <!-- Speakers -->
     <section class="page-section bg-primary" id="speakers">
         <div class="container">
@@ -189,7 +246,7 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="https://sites.google.com/site/chrisdbowman40/home">Chris
                             Bowman</a></h3>
                     <p style="text-align: center;">University of York</p>
-                    <p style="text-align: center; color: blue;">Kronecker Products, Modular Representations, and Character Vanishing: 
+                    <p style="text-align: center; color: white;">Kronecker Products, Modular Representations, and Character Vanishing: 
 							results and conjectures of Christine Bessenrodt</p>
                 </div>
                 <div class="col-sm">
@@ -406,7 +463,7 @@
                                 <dt class="text-white-50 mb-6"><li>Conference</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">July 18-22, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>July 18-22, 2022</del></dd>
                             </div>
                         </div>
                     </div>
