--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -483,7 +483,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mb-4">Registration</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4" style="text-align: justify;"> 
+                    <p class="text-white-50 mb-4" style="text-align: center;"> 
 			Registration for FPSAC 2022 is now closed.
 		    </p>
 <!--                    Registration can be done for either in-person or online attendance, and the rates are different
