Added video playlist

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -266,7 +266,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <p style="text-align: center;">Go to the <a href="#schedule">Schedule</a> section for information on contributed talks.</p>
+                    <p style="text-align: center;">Go to the <a href="#schedule">Schedule</a> section for information on contributed talks.
+                    The videos for all talks are available on the <a href="https://youtube.com/playlist?list=PLQXtaLhI1-1p7AOWGnKjubV4gFRv-6yxv" target="_blank" >FPSAC 2022 playlist</a>. 
                 </div>
             </div>
         </div>
@@ -1591,14 +1592,14 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Schedule</h2>
                     <hr class="divider light my-4" />
-                    <p>The final schedule is as follows:
+                    <p><!--  The final schedule is as follows:
                     <a href="assets/img/schedule.png" target="_blank">
                     <img class="img-fluid" src="assets/img/schedule.png" alt="Tentative schedule" style="width:750px;">
-                    </a> 
-                    The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf">here</a>.
-                    The YouTube livestream link is <a href="https://youtu.be/dMheBgrl-sQ">here</a>.
+                    </a> -->
+		    The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf">here</a>.
+                    The videos for all talks are available on the <a href="https://youtube.com/playlist?list=PLQXtaLhI1-1p7AOWGnKjubV4gFRv-6yxv" target="_blank" >FPSAC 2022 playlist</a>. 
                     The preliminary version of the published extended abstracts are available
-                    <a href="https://www.mat.univie.ac.at/~slc/wpapers/FPSAC2022/">here</a>.
+                    <a href="https://www.mat.univie.ac.at/~slc/wpapers/FPSAC2022/" target="_blank">here</a>.
                     </p>
                     <p class="text-white-50 mb-4">The list of accepted talks and posters is below. 
                         Presenters are marked with an asterisk. 
