faculty alumni first steps

--- a/phd-alumni.html
+++ b/phd-alumni.html
@@ -1,5 +1,5 @@
 ---
-title: Ph.D. Degrees Awarded
+title: Ph.D. Alumni
 ---
 <div class="col-md-12">
   <h2> Ph.D. degrees awarded by the department (by year) </h2>
