--- a/fac-alumni.html
+++ b/fac-alumni.html
@@ -4,14 +4,17 @@ title: Former Faculty members
 <div class="col-md-12">
   <h2> Former Faculty members of the Department </h2>
 
-  {% assign fac = site.data.fac-alumni %}
+  {% assign fac = site.data.fac-alumni | reverse %}
 
 
 
- <ol>
+ <ul class="list-group list-group-flush ">
   {% for y in fac %}
-   <li> {{ y.name }} </li>
+   <li class="list-group-item"> 
+    <h5>{% if y.website %}<a href="{{y.website}}" target="_blank"> {{ y.name }}</a>{% else %}{{ y.name }}{% endif %}</h5> 
+    {% if y.position %}<div><strong>Present position:</strong> {{ y.position }}</div> {% endif %}
+  </li>
   {% endfor %}
- </ol>
+ </ul>
 
 </div>
