--- a/postdoc-alumni.html
+++ b/postdoc-alumni.html
@@ -6,7 +6,7 @@ title: Former Postdocs
 
   {% assign alumni = site.data.postdoc-alumni %}
 
-    <ul class="list-group">
+    <ul class="list-group list-group-flush">
     {% for y in alumni %}
       <li class="list-group-item">
       <h5 class="list-item">{{ y.name }}
