--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -15,7 +15,9 @@ The department hosts three types of postdoctoral fellows. These are:
         <ul>
             <li><a href="http://www.nbhm.dae.gov.in/postdoct.html">NBHM Postdoctoral Fellowship</a></li>
 
-            <li><a href="http://ugcdskpdf.unipune.ac.in/">U.G.C. Kothari Fellowship</a></li>
+            <li><a href="https://www.ugc.ac.in/ugc_notices.aspx?id=NDUzOQ==">Dr. S. Radhakrishnan UGC Post-Doctoral
+                Fellowship 
+                </a></li>
 
             <li><a href="http://serb.gov.in/page/awards_fellowship#National%20Post%20Doctoral%20Fellowship">National Postdoctoral Fellowship</a> </li>
         </ul>
