--- a/staff.html
+++ b/staff.html
@@ -22,6 +22,12 @@ title: Staff
         <div>
           <strong>UserID:</strong> {{stu.user-id}}
         </div>
+	<div>
+                <strong>Phone :</strong> +91-80 2293 {{ stu.phone-ext}}
+              </div>
+              <div>
+                <strong>Office :</strong> Room {{ stu.office}}
+              </div>
       </div>
     </td>
     {% if stu.image %}
