--- a/instructors.html
+++ b/instructors.html
@@ -2,7 +2,7 @@
 title: Instructors
 ---
 <div class="col-md-12">
-    <h2>Instructors</h2>
+    <h2>Instructors for the B.Tech (Mathematics and Computing)</h2>
 
     <p>
         <b>To send email:
@@ -36,10 +36,7 @@ title: Instructors
                                     <strong>UserID:</strong>
                                     {{stu.user-id}}
                                 </div>
-                                <div>
-                                    <strong>Fellowship:</strong>
-                                    {{stu.position}}
-                                </div>
+                            
                             </div>
                             <div class="col-md-2">
                                 {% if stu.image %}
