Replaced Announcement and ICIAM 2023 files

--- a/NBHMICIAM2023/announcement.html
+++ b/NBHMICIAM2023/announcement.html
@@ -20,7 +20,7 @@
 	<p>
 	<strong size="+1">
 		The 2023 edition of the 
-		<a href="https://iciam2023.org/", target="_blank">10th International Congress on Industrial and Applied Mathematicians</a>
+		<a href="https://iciam2023.org/", target="_blank">10th International Congress on Industrial and Applied Mathematics</a>
 		(ICIAM 2023)
 	</strong>
 	<font color="black">
