--- a/PSS23.html
+++ b/PSS23.html
@@ -291,9 +291,9 @@ This is joint work with Cheick Tour&#233; and Rudi Brits, University of Johannes
 
  
 
-\[ w(A) \geq \frac{1}{2} \Vert A \Vert + \frac{1}{2} \bigg\vert\Vert \text{Re}(A) \Vert - \Vert \text{Im}(A) \Vert\bigg\vert,\]
+$$ w(A) \geq \frac{1}{2} \Vert A \Vert + \frac{1}{2} \bigg\vert\Vert \text{Re}(A) \Vert - \Vert \text{Im}(A) \Vert\bigg\vert,$$
 
-\[ w(A) \leq \frac{1}{2} \Vert A \Vert^{\frac{1}{2}}   \Vert \vert A \vert^{t} + \vert A^{\ast} \vert^{1-t} \Vert \quad\forall t \in [0,1].\]
+$$ w(A) \leq \frac{1}{2} \Vert A \Vert^{\frac{1}{2}}   \Vert \vert A \vert^{t} + \vert A^{\ast} \vert^{1-t} \Vert \quad\forall t \in [0,1].$$
 
  
 
