--- a/PSS23.html
+++ b/PSS23.html
@@ -1,77 +1,8 @@
 ---
 title: Postdoc-Student Symposium 2023
 layout: standalone
+css : PSS23
 ---
-<!DOCTYPE html>
-<html>
-
-<head>
-  
-    
-   
-   <link rel="stylesheet" href="https://latex.now.sh/style.css">
-
-    <title> Postdoc-Student Symposium 2023</title>
-
-    <style>
-        body {
-            background-color: white;
-            font-size: 30px;
-            width: 100%;
-        }
-
-
-        #head {
-            background-color: teal;
-            color: white;
-            text-align: left;
-            height: 60px;
-        }
-
-
-        #customcontainer {
-            background-color: white;
-            width: 100%;
-            font-size: 18px;
-            padding: 0px;
-        }
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: white;
-}
-
-li {
-  float: center;
-}
-
-be {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: darkred;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-    </style>
-</head>
-
-
-    
-
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-</head>
-
-<body>
 
     <ul>
         <li style="font-family:bahnschrift;"><a>Postdoc-Student Symposium, 2023
