--- a/PSS23.html
+++ b/PSS23.html
@@ -258,9 +258,24 @@ energy norm. Numerical results are performed to validate the theoretical finding
               <hr size="4" , width=100%">            
                 <p style="color:maroon"><b>Rajas Sompurkar</b></p>
 
-                <p><b>TBA</b></p>
+                <p><b>Existence of Higher Extremal Kähler Metrics on a Minimal Ruled Surface </b></p>
 
-                <p><b>Abstract.</b> TBA
+                <p><b>Abstract.</b> In this talk we will first see the definitions of ‘higher extremal K¨ahler metric’
+                    and ‘higher constant scalar curvature K¨ahler (hcscK) metric’, both of which are analogous
+                    to the definitions of ‘extremal K¨ahler metric’ and ‘constant scalar curvature K¨ahler (cscK)
+                    metric’ respectively. Informally speaking, on a compact K¨ahler manifold a higher extremal
+                    K¨ahler metric is a K¨ahler metric whose corresponding top Chern form and volume form
+                    differ by a smooth real-valued function whose gradient is a holomorphic vector field and
+                    an hcscK metric is a K¨ahler metric whose top Chern form and volume form differ by a
+                    real constant or equivalently whose top Chern form is harmonic. We will then prove that
+                    on a special type of minimal ruled surface, which is an example of a ‘pseudo-Hirzebruch
+                    surface’, every K¨ahler class admits a higher extremal K¨ahler metric which is constructed
+                    by using the ‘momentum construction method’ involving the ‘Calabi ansatz procedure’. We
+                    will then check that this specific higher extremal K¨ahler metric cannot be an hcscK metric.
+                    By doing a certain set of computations involving the ‘top Bando-Futaki invariant’ we will
+                    finally conclude that hcscK metrics do not exist in any K¨ahler class on this K¨ahler surface.
+                    If time permits we will see the motivation for studying this problem and its analogy with
+                    an other related and previously well-studied problem.
                 </p>
 		    </section>
                   
