--- a/PSS23.html
+++ b/PSS23.html
@@ -164,7 +164,7 @@ This is joint work with Cheick Tour&#233; and Rudi Brits, University of Johannes
                 <hr size="4" , width=100%">
                 <p style="color:maroon"><b>Gobinda Sau</b></p>
 
-                <p><b>Existence of a Harmonic Map from $\mathbb{C}$ to $\mathbb{H}^2$ with prescribed Hopf Differential</b></p>
+                <p><b>Existence of a harmonic map from $\mathbb{C}$ to $\mathbb{H}^2$ with prescribed Hopf differential</b></p>
 
                 <p><b>Abstract.</b> This is an expository article on the existence of a harmonic map from $\mathbb{C}$ to $\mathbb{H}^2$ with a prescribed Hopf differential, focusing on Riemannian Geometry aspects. Assuming the existence of a solution to a certain vortex equation, we construct a spacelike immersion in $\mathbb{R}^{2,1}$ whose Gauss map is our desired map. 
                 </p>
@@ -216,7 +216,7 @@ This is joint work with Cheick Tour&#233; and Rudi Brits, University of Johannes
                <hr size="4" , width=100%">
                <p style="color:maroon"><b>Pintu Bhunia</b></p>
 
-               <p><b>Numerical Radius Inequalities with Applications</b></p>
+               <p><b>Numerical radius inequalities with applications</b></p>
 
                 <p><b>Abstract.</b> Let $A$ be a bounded linear operator on a complex Hilbert Space $\mathcal{H}$. We develop several bounds for the numerical radius $w(A)$ of $A$, which improve the classical bound $\frac{1}{2} \Vert A \Vert \leq w(A) \leq \Vert A \Vert$. Among other bounds, we prove that 
 
@@ -288,7 +288,7 @@ energy norm. Numerical results are performed to validate the theoretical finding
 
                 <p><b>Homogenization of Partial Differential equations on oscillating boundary domain</b></p>
 
-                <p><b>Abstract.</b> In this talk we can discuss the homogenization of PDE on oscillating boundary domains. We can briefly go through the technique periodic unfolding method and then see how it works on homogenization problems.
+                <p><b>Abstract.</b> In this talk we will discuss the homogenization of PDE on oscillating boundary domains. We will briefly go through the technique periodic unfolding method and then see how it works on homogenization problems.
                 </p>
 		    </section>
 
