--- a/PSS23.html
+++ b/PSS23.html
@@ -115,9 +115,9 @@ This talk is based on the joint work with Prof. Arvind Ayyer.
                 <hr size="4" , width=100%">
                 <p style="color:maroon"><b>Arpita Mal</b></p>
 
-                <p><b>TBA</b> </p>
+                <p><b>Preservation of geometric properties of operators under  Bishop-Phelps-Bollobás type approximation</b> </p>
 
-                <p><b>Abstract.</b> TBA
+                <p><b>Abstract.</b> 	We discuss a version of BPB-type approximation of bounded operators between Banach spaces from a geometric point of view. We show that for sufficiently small positive values of $\epsilon,$ many geometric properties like smoothness, norm attainment and extremality of operators are preserved under such approximation. We present examples of pairs of Banach spaces satisfying non-trivial norm preserving uniform $\epsilon-$BPB approximation property in the global sense. Finally, we explore these concepts in case of bounded operators between Hilbert spaces.
                 </p>
                </section>
 
