--- a/PSS23.html
+++ b/PSS23.html
@@ -151,7 +151,7 @@ This talk is based on the joint work with Prof. Arvind Ayyer.
 <br>
 Without assuming linearity, one needs to impose stronger preservation properties on $\phi$ to arrive at the same conclusion. Kowalski and S&#322;odkowski proved that every functional $\phi$ on a Banach algebra $A$ (no linearity assumed on $\phi$) with $\phi(0)= 0$ such that the difference of the value of any two elements is contained in the spectrum of the difference of those two elements, is linear and multiplicative. Thus, we may replace the linearity assumption and the invertibility-preserving property by a single weaker assumption and still arrive at the same conclusion. 
 <br>
-We consider a multiplicative version of the classical Kowalski-S&#322;odkowski Theorem which identifies the characters among the collection of all functionals on a complex and unital Banach algebra $A$. In particular, we prove: If $A$ is a $C^\star$-algebra, and if $\phi:A\to\mathbb C $ is a function satisfying $ \phi(x)\phi(y) \in \sigma(xy) $ for all $x,y\in A$ (where $\sigma $ denotes the spectrum), then either $\phi$ is a character of $A$ or $-\phi$ is a character of $A$, if and only if $\phi$ is continuous.
+We consider a multiplicative version of the classical Kowalski-S&#322;odkowski Theorem. In particular, we prove: If $A$ is a $C^\star$-algebra, and if $\phi:A\to\mathbb C $ is a function satisfying $ \phi(x)\phi(y) \in \sigma(xy) $ for all $x,y\in A$ (where $\sigma $ denotes the spectrum), then either $\phi$ is a character of $A$ or $-\phi$ is a character of $A$, if and only if $\phi$ is continuous.
 <br>
 This is joint work with Cheick Tour&#233; and Rudi Brits, University of Johannesburg.
                 </p>
