Updated NBHM ICIAM 2023

--- a/NBHMICIAM2023/index01may2023.html
+++ b/NBHMICIAM2023/index01may2023.html
@@ -18,7 +18,7 @@
 </H1>
 	</center>
 <center>
-	<p> <b> <font color="blue", size="+1"><a href="ICIAM2023-ListofParticipants.pdf", target="_blank"> The list of recommended contingent for NBHM travel support to attend ICIAM-2023</a></font>   
+	<p> <b> The application portal is now closed. NBHM will put a list of selected applications on the webpage once it is finalised. 
 	</b></p>
 </center>
 </body>
