restored courses for links

--- a/catalogue.html
+++ b/catalogue.html
@@ -5,7 +5,7 @@ title: Course Catalogue
 <h2>Course Catalogue</h2>
     {% assign sorted = site.all-courses | sort: 'code'  %}
 
-{% for course in sorted  %}
+{% for course in sorted  %}{% unless course.archived %}
 <div>
 
   {% capture lnk %}{{ site.baseurl }}/all-courses/{{  course.code  | downcase | replace: ' ', '' }}.html{% endcapture  %}
@@ -49,4 +49,5 @@ title: Course Catalogue
 <hr />
 </div>
 
+{% endunless %}
 {% endfor %}
