--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -59,6 +59,9 @@ The department hosts three types of postdoctoral fellows. These are:
         </p>
     </li>
 </ol>
+
+<p><b>All postdocs will be expected to teach/perform TA duties depending on the department's requirements.</b></p>
+
 <p>
 For any clarifications, you may write to us at postdocapplications.iiscmath(at)gmail(dot)com.
 </p>
