--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -63,5 +63,5 @@ The department hosts three types of postdoctoral fellows. These are:
 <p><b>All postdocs will be expected to teach/perform TA duties depending on the department's requirements.</b></p>
 
 <p>
-For any clarifications, you may write to us at postdocapplications.iiscmath(at)gmail(dot)com.
+For any clarifications, you may write to the <a href="http://www.math.iisc.ac.in/committees.html"> postdoctoral fellows committee</a>.
 </p>
