--- a/course-schedule.html
+++ b/course-schedule.html
@@ -2,3 +2,7 @@
 title: Course Schedule
 ---
 <iframe width="100%" height="500" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRBrrAahrnKfoZuC3G95d8arOw4m5pbx41vccGC5dSa1fDX8OheIbBHMXwuUy6guYN76iQzPoD1YvPw/pubhtml?gid=1591430120&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
+<h4>Midterm week</h4>
+ 
+The midterm week for the mathematics department will be from 25.09.2023 to 29.09.2023. There will be no regular classes during this week for `MA` courses.
