--- a/seminars-all.html
+++ b/seminars-all.html
@@ -66,6 +66,7 @@ title: Seminars
 <div class="" id = "tables">
   <h3>By Year</h3>
   <ul>
+    <li><a href="SeminarsByYear/Seminars2024.html">2024</a></li>
     <li><a href="SeminarsByYear/Seminars2023.html">2023</a></li>
     <li><a href="SeminarsByYear/Seminars2022.html">2022</a></li>
     <li><a href="SeminarsByYear/Seminars2021.html">2021</a></li>
