link check cleanup

--- a/intro.html
+++ b/intro.html
@@ -16,7 +16,7 @@
   employment opportunities for Ph.D.'s in mathematics are excellent
   - both in academics and in industry. </p>
 <p>The Department has pioneered interdisciplinary programmes like
-  the <a href="http://math.iisc.ernet.in/~imi" target="_blank">IISc
+  the <a href="https://math.iisc.ac.in/~imi" target="_blank">IISc
   Mathematics Initiative</a>. It takes active part in the Indo-French <a href="http://disc.iisc.ernet.in/ficus/ficus.html" target="_blank">Cyber
   University project</a> with Toulouse University Network. The Department
   is also deeply involved in the Kishore Vaigyanik Protsahan Yojana
