--- a/majres.html
+++ b/majres.html
@@ -9,7 +9,7 @@
             </td>
             <td valign="top" > 
               <p>See also:
-              <a href="http://www.math.iisc.ernet.in/comp_projects.htm">List of&nbsp; 
+              <a href="https://math.iisc.ac.in/comp_projects.htm">List of&nbsp; 
               Completed Projects</a></p>
              
               <p>Listed below are some major research projects.<br>
