--- a/matholym.html
+++ b/matholym.html
@@ -14,7 +14,7 @@
                 <li><a href="matholym-nat.html">National Olympiad</a><br>
                   <br>
                 </li>
-                <li> <a href="http://math.iisc.ernet.in/~nands/index1.html" target="_blank">Karnataka 
+                <li> <a href="https://math.iisc.ac.in/~nands/index1.html" target="_blank">Karnataka 
                   Regional Mathematical Olympiad (KRMO)</a> (will open in new 
                   window) </li>
               </ul>
