--- a/pastevents-conf/conf.html
+++ b/pastevents-conf/conf.html
@@ -129,7 +129,7 @@ confirmation.
 <P>
 <center><H3> Conveners </H3></center>
 <UL>
-<LI> <A HREF="http://math.iisc.ernet.in/~rangaraj/">Dr. G. Rangarajan</A>, IISc, India
+<LI> <A HREF="https://math.iisc.ac.in/~rangaraj/">Dr. G. Rangarajan</A>, IISc, India
 <LI> Prof. N. Mukunda, IISc, India
 <LI> Prof. Ram Ramaswamy, JNU, India
 </UL>
@@ -162,7 +162,7 @@ confirmation.
 <UL>
 <LI> Prof. G. Anantha Krishna, IISc, India
 <LI> Prof. N. Mukunda, IISc, India
-<LI> <A HREF="http://math.iisc.ernet.in/~rangaraj/">Dr. G. Rangarajan</A>, IISc, India
+<LI> <A HREF="https://math.iisc.ac.in/~rangaraj/">Dr. G. Rangarajan</A>, IISc, India
 <LI> Prof. Renuka Ravindran, IISc, India
 </UL>
 </P>
@@ -228,8 +228,8 @@ Institute", as this was what the Institute was formerly called!</br>
 <P ALIGN=left>
 For further details, please contact:
 <PRE>
-<BLINK><A HREF="http://math.iisc.ernet.in/~rangaraj/">Dr. G. Rangarajan, Convener</A></BLINK>
-<A HREF="http://math.iisc.ernet.in/">Department of Mathematics</A>
+<BLINK><A HREF="https://math.iisc.ac.in/~rangaraj/">Dr. G. Rangarajan, Convener</A></BLINK>
+<A HREF="https://math.iisc.ac.in/">Department of Mathematics</A>
 <A HREF="http://www.iisc.ernet.in/">Indian Institute of Science</A>
 <A HREF="http://ece.iisc.ernet.in/bu.edu/karnataka/cities/bangalore/index.html">Bangalore</A> 560 012
 <A HREF="http://ece.iisc.ernet.in/india.html">INDIA</A>
