--- a/pub1991-2007.html
+++ b/pub1991-2007.html
@@ -11,16 +11,16 @@
   <pre>&nbsp;</pre>
 </div>
 <div align="center">
-  <pre><font size="3" face="Verdana"><a href="http://math.iisc.ernet.in/pub1991-1995.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 1991-1995</span></a></font></pre>
+  <pre><font size="3" face="Verdana"><a href="https://math.iisc.ac.in/pub1991-1995.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 1991-1995</span></a></font></pre>
 </div>
 <div align="center">
-  <pre><font size="3" face="Verdana"><a href="http://math.iisc.ernet.in/pub1996-2000.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 1996-2000</span></a></font></pre>
+  <pre><font size="3" face="Verdana"><a href="https://math.iisc.ac.in/pub1996-2000.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 1996-2000</span></a></font></pre>
 </div>
 <div align="center">
-  <pre><font size="3" face="Verdana"><a href="http://math.iisc.ernet.in/pub2001-2005.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 2001-2005</span></a></font></pre>
+  <pre><font size="3" face="Verdana"><a href="https://math.iisc.ac.in/pub2001-2005.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 2001-2005</span></a></font></pre>
 </div>
 <div align="center">
-  <pre><font size="3" face="Verdana"><a href="http://math.iisc.ernet.in/pub2006-2010.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 2006-2010</span></a></font></pre>
+  <pre><font size="3" face="Verdana"><a href="https://math.iisc.ac.in/pub2006-2010.html"><span style="color: rgb(0, 0, 144); font-weight: 700;">During 2006-2010</span></a></font></pre>
 </div>
 <div align="center">
   <pre>&nbsp;</pre>
