--- a/seminar/sa12.html
+++ b/seminar/sa12.html
@@ -92,7 +92,7 @@ and Feller Diffusion<br>
 <br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a
-href="http://math.iisc.ernet.in/seminar/other/imi.pdf">Abstract of this Talk</a><br>
+href="https://math.iisc.ac.in/seminar/other/imi.pdf">Abstract of this Talk</a><br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <b><br
 style='mso-special-character:line-break'>
