--- a/seminar/sesep24.html
+++ b/seminar/sesep24.html
@@ -132,7 +132,7 @@ div.Section1
   </td>
   <td style='padding:.75pt .75pt .75pt .75pt'>
   <p class=MsoNormal><span class=SpellE>Dr.P.Danumjaya</span> <span
-  style='mso-spacerun:yes'>   </span>.</p>
+  style='mso-spacerun:yes'>ï¿½ï¿½ï¿½</span>.</p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:2'>
@@ -140,10 +140,10 @@ div.Section1
   <p class=MsoNormal><b>Affiliation:</b></p>
   </td>
   <td style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=MsoNormal>Department<span style='mso-spacerun:yes'>  </span>of<span
-  style='mso-spacerun:yes'>  </span>Mathematics,<span
-  style='mso-spacerun:yes'>  </span><span class=SpellE>IISc</span>.,<span
-  style='mso-spacerun:yes'>  </span><st1:City><st1:place>Bangalore</st1:place></st1:City></p>
+  <p class=MsoNormal>Department<span style='mso-spacerun:yes'>ï¿½ </span>of<span
+  style='mso-spacerun:yes'>ï¿½ </span>Mathematics,<span
+  style='mso-spacerun:yes'>ï¿½ </span><span class=SpellE>IISc</span>.,<span
+  style='mso-spacerun:yes'>ï¿½ </span><st1:City><st1:place>Bangalore</st1:place></st1:City></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:3'>
@@ -151,7 +151,7 @@ div.Section1
   <p class=MsoNormal><b>Abstract/Brief Description:</b></p>
   </td>
   <td style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=MsoNormal><a href="http://www.math.iisc.ernet.in/seminar/other/Abstract.pdf">Abstract</a></p>
+  <p class=MsoNormal><a href="https://math.iisc.ac.in/seminar/other/Abstract.pdf">Abstract</a></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:4'>
