--- a/seminar/si.html
+++ b/seminar/si.html
@@ -75,7 +75,7 @@
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; </span><a
- href="http://math.iisc.ernet.in/seminar/other/abs_iyer.ps">Abstract of this talk</a>&nbsp;<span
+ href="https://math.iisc.ac.in/seminar/other/abs_iyer.ps">Abstract of this talk</a>&nbsp;<span
  style="font-weight: bold;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; &nbsp; &nbsp; </span><br style="font-weight: bold;">
