--- a/ugc-cas/design/index.html
+++ b/ugc-cas/design/index.html
@@ -27,7 +27,7 @@ var mygallery=new fadeSlideShow({
 	dimensions: [237, 200], //width/height of gallery in pixels. Should reflect dimensions of largest image
 	imagearray: [
 		["images/dept1.jpg","seminar.html" ],
-		["images/dept4.jpg","http://math.iisc.ernet.in/visitors.htm"]
+		["images/dept4.jpg","https://math.iisc.ac.in/visitors.htm"]
 		  //<--no trailing comma after very last image element!
 	],
 	displaymode: {type:'auto', pause:2500, cycles:0, wraparound:false},
@@ -162,7 +162,7 @@ var mygallery3=new fadeSlideShow({
     <!--footer start -->
     <div id="footer">
         <p class="copyright">
-            ©Maths Dept. IISc.2012.All Rights Reserved.</p>
+            ï¿½Maths Dept. IISc.2012.All Rights Reserved.</p>
         <!--<p class="design">
             Designed by : <a href="http://www.dataworx.co.in/" target="_blank" class="link">DataWorX</a></p>-->
     </div>
