--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -342,7 +342,7 @@
                     <h2 style="text-align: center;">Organizing Committee</h2>
                     <hr class="divider my-4" />
                 <div class="col-sm">
-                    <p style="text-align: center;"><a href="http://www.math.iisc.ernet.in/~arvind/">Arvind Ayyer</a><br><strong>Chair</strong></br>Indian Institute of Science, Bangalore</p>
+                    <p style="text-align: center;"><a href="https://math.iisc.ac.in/~arvind/">Arvind Ayyer</a><br><strong>Chair</strong></br>Indian Institute of Science, Bangalore</p>
                     <p style="text-align: center;"><a href="https://www.gbhatnagar.com/">Gaurav Bhatnagar</a></br>Ashoka University, Delhi</p>
                     <p style="text-align: center;"><a href="http://people.iitgn.ac.in/~adixit/">Atul Dixit</a></br>Indian Institute of Technology, Gandhinagar</p>
                     <p style="text-align: center;"><a href="https://www.renyi.hu/~ohkatona/">Gyula O. H. Katona</a></br>Hungarian Academy of Sciences</p>
