--- a/students-phd.html
+++ b/students-phd.html
@@ -50,6 +50,10 @@ title: Ph.D. Students
                   <strong>UserID:</strong>
                   {{stu.user-id}}
                 </div>
+                <div>
+    		  <strong>Office:</strong>
+    		  {{stu.office}}
+		</div>
               </div>
                 <div class="col-md-2">
                   {% if stu.image %}
