Added allocated office details of all students

--- a/students-intphd.html
+++ b/students-intphd.html
@@ -47,6 +47,10 @@ title: Integrated Ph.D. Students
                       <strong>UserID:</strong>
                       {{stu.user-id}}
                     </div>
+                    <div>
+    		  <strong>Office:</strong>
+    		  {{stu.office}}
+		</div>
                   </div>
                     <div class="col-md-2">
                       {% if stu.image %}
