Added postdocs' office details
Added <div>
    <strong>Office:</strong>
    {{stu.office}}
</div>
in postdocs.html

--- a/postdocs.html
+++ b/postdocs.html
@@ -37,6 +37,11 @@ title: Postdocs
                                     {{stu.user-id}}
                                 </div>
                                 <div>
+    				<strong>Office:</strong>
+    				{{stu.office}}
+				</div>
+
+                                <div>
                                     <strong>Fellowship:</strong>
                                     {{stu.position}}
                                 </div>
