Minor display text changes

--- a/postdocs.html
+++ b/postdocs.html
@@ -33,11 +33,11 @@ title: Postdocs
                                     {{stu.research-area}}
                                 </div>
                                 <div>
-                                    <strong>UserID:</strong>
+                                    <strong>UserID: </strong>
                                     {{stu.user-id}}
                                 </div>
                                 <div>
-    				<strong>Office:</strong>
+    				<strong>Office: Room </strong>
     				{{stu.office}}
 				</div>
 
